Made changes requested by Bradm. corrected spacing after puncuation on class-history.php removed extraneous * on long comment in config.plugin.php

--- a/admin/css/boldgrid-backup-admin-premium.css
+++ b/admin/css/boldgrid-backup-admin-premium.css
@@ -6,6 +6,10 @@
 	border-top-color: #feb424;
 }
 
+#bgbkup_database_encryption .bglib-card-icon {
+	border-top-color: #aaa;
+}
+
 #bgbkup_dream_objects .bglib-card-icon {
 	border-top-color: #3e95be;
 }
